# my-notion-companion

./: .config.toml  .gitignore  .pre-commit-config.yaml  README.md  compressor_template.txt  env.yml  pyproject.toml  query_constructor_template.txt  run.sh  self_query_examples.toml  self_query_template.txt  self_query_template_chinese.txt
app/: My_Notion_Companion.py  app.py
my_notion_companion/: chatbot.py  conversational_rag.py  document_filter.py  document_match_checker.py  document_metadata_filter.py  exceptions.py  few_shot_constructor.py  notion_agent.py  notion_chatbot.py  notion_loader.py  query_analyzer.py  query_constructor.py  retriever.py  self_query.py  utils.py  vectorstore_builder.py
notebooks/: demo_notion_chatbot.ipynb  evaluate_embedding_models.ipynb  evaluate_with_local_chat_models.ipynb
playground/: Untitled.ipynb  cohere_rag.ipynb  dev_agent.ipynb  dev_bm25_self_query.ipynb  dev_document_filter.ipynb  dev_document_metadata.ipynb  dev_few_shot_parser.ipynb  dev_streaming.ipynb  evaluate_embedding_models.ipynb  evaluate_retriever.ipynb  evaluate_vector_databases.ipynb  improving_doc_retrieval.ipynb  langchain_llama.ipynb  langchain_with_local_chat_models.ipynb  llama_cpp_param_search.ipynb  model_play.py  notion_agent.py  notiondb_test.ipynb  self-query.ipynb  test_autotokenizer_chat_prompt.ipynb  test_custom_query_constructor.ipynb  test_e2e_quick_and_dirty.ipynb  test_notion_agent.ipynb  test_notion_db_connection.ipynb  test_router.ipynb
resources/: embedding_model_scores.csv  llm_scores.csv  test_llm_standalone_chat.txt  (+1 more)
(+12 files in other folders)
