[tool.poetry]
name = "my-notion-companion"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.1.1"
huggingface-hub = "^0.20.2"
jupyterlab = "^4.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
