[project]
name = "my-notion-companion"
version = "0.0.1"
authors = [
  { name="Fred Yang", email="fredyang0507@gmail.com" },
]
description = "My Notion Companion. A conversational RAG-enabled agent to query Notion."
readme = "README.md"
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/fyang0507/my-notion-companion"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["my_notion_companion"]  # ["."] by default
